# SocketChat

./: Cargo.toml
src/: main.rs
src/client/: driver.rs  interface.rs  mod.rs  parser.rs
src/common/: communication.rs  config.rs  message.rs  mod.rs
src/server/: mod.rs  state.rs
