[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
crossterm = "0.27.0"
derive-error = "0.0.5"
postcard = "1.0.8"
ratatui = "0.26.1"
serde = {version = "1.0.197", features = ["derive"]}
tokio = {version = "1.36.0", features = ["full"]}
